fix(spinner): high contrast on chromium edge

--- a/projects/ng-aquila/src/spinner/spinner.component.scss
+++ b/projects/ng-aquila/src/spinner/spinner.component.scss
@@ -91,7 +91,10 @@ $edge-diameter: 12%;
 }
 
 @media screen and (-ms-high-contrast: active) {
-  .nx-spinner__spin-block {
-    border-color: window highlight highlight highlight;
+  :host,
+  :host.nx-spinner--negative {
+    .nx-spinner__spin-block {
+      border-color: window highlight highlight highlight;
+    }
   }
 }
